--- a/source/partials/scripts/_footer.erb
+++ b/source/partials/scripts/_footer.erb
@@ -6,6 +6,7 @@ document.addEventListener("DOMContentLoaded", function(event) {
 });
 </script>
 <%= javascript_include_tag "jquery", "foundation.min" %>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lozad.js/1.6.0/lozad.min.js"></script>
 <%#= javascript_include_tag "nav", "smooth-scroll", "cookie", "sharer", "all" %>
 <%#= javascript_include_tag "all" %>
 <%#=<script defer src="/public/js/nav.js"></script> %>
