--- a/source/partials/snippets/_person-small.erb
+++ b/source/partials/snippets/_person-small.erb
@@ -1,6 +1,6 @@
 <div class="media-object person-small">
     <% if p.has_key?("profile_pic") %>
-        <div class="media-object-section media-object--avatar"><img src="<%= p["profile_pic"]["url"] %>?f=face&fit=thumb&w=250&q=35" class="avatar avatar--medium circle" alt="<%= p["fullname"] %>"></div>
+        <div class="lozad media-object-section media-object--avatar"><img data-src="<%= p["profile_pic"]["url"] %>?f=face&fit=thumb&w=250&q=35" class="avatar avatar--medium circle" alt="<%= p["fullname"] %>"></div>
     <% end %>
     <div class="media-object-section media-object--info main-section align-self-middle">
         <h4 class="person-name">
