Lozad all the things

--- a/source/compliance/index.html.slim
+++ b/source/compliance/index.html.slim
@@ -47,9 +47,9 @@ section#compliance-shared-responsibility.section-article.container-gray-2
       h2.headline-2 Understanding Shared Responsibility
   .row.align-center
     .columns.small-12.large-8
-      img src="https://images.ctfassets.net/189dvqdsjh46/2HRXBAtQrSga8OuaMgYc22/fa77a259452d4c7dc5d77a0a45db31e1/shared-resp-1-dark.svg" alt="Shared Responsibility"
+      img class="lozad img-crisp" data-src="https://images.ctfassets.net/189dvqdsjh46/2HRXBAtQrSga8OuaMgYc22/fa77a259452d4c7dc5d77a0a45db31e1/shared-resp-1-dark.svg" alt="Shared Responsibility"
     .columns.small-12.large-12
-      img src="https://images.ctfassets.net/189dvqdsjh46/28YL53F8qMaumKQ0IA4sEW/ab55b40593c253f782e383c164ae6715/shared-resp-2-dark.svg" alt="Shared Responsibility Diagram"
+      img class="lozad img-crisp" data-src="https://images.ctfassets.net/189dvqdsjh46/28YL53F8qMaumKQ0IA4sEW/ab55b40593c253f782e383c164ae6715/shared-resp-2-dark.svg" alt="Shared Responsibility Diagram"
   .row.align-center
     .columns.small-12.medium-5.large-4
       h3.headline-5 Required Compliance Controls
