--- a/source/partials/cards/_card-report.slim
+++ b/source/partials/cards/_card-report.slim
@@ -64,7 +64,7 @@ ruby:
                     = post.title
             - unless image_url == nil
                 a.text-center href=related_post_path title=link_title
-                    img.thumbnail.float-right(src="#{image_url}?fit=thumb&w=240&h=240" alt="preview" width="120")
+                    img.lozad.thumbnail.float-right(data-src="#{image_url}?fit=thumb&w=240&h=240" alt="preview" width="120")
             p.text-small = post.summary
             - if defined?(show_button) && show_button == true
                 = partial "partials/snippets/button", :locals => { :label => link_title_short, :url => related_post_path, :button_classes => "button success", :icon => "icon-chevron-right", :icon_align => "right" }
@@ -77,4 +77,4 @@ ruby:
                     = post.title
         - if post.has_key?("image_thumb")
             a.text-center href=related_post_path title=link_title
-                img class="product-thumb" alt="preview" data-interchange="[#{image_url}?fit=thumb&w=400&q=50, small], [#{image_url}?fit=thumb&w=600, large]" style="padding: 0 1rem 0 1rem;" /
+                img.lozad.product-thumb" alt="preview" data-src="#{image_url}?fit=thumb&w=600" style="padding: 0 1rem 0 1rem;" /
