Moar lozad #perf

--- a/source/compliance/index.html.slim
+++ b/source/compliance/index.html.slim
@@ -145,7 +145,7 @@ section#compliance-hitrust.section-article.container-gray-12
         [HITRUST](/discover/hitrust) is the most important prescriptive compliance framework in healthcare. It helps give enterprises assurances that they can use the cloud as if compliance didn't exist, while giving digital health companies a shortcut to credibility.
   .row.align-center.group
     .columns.small-12.large-12
-      img.img-crisp alt="platform-controls-diagram" data-interchange="[https://images.ctfassets.net/189dvqdsjh46/fE9OrSoh0sa04GGIeUA6y/1ec20a7821aaf7c388f891786139e088/platform-hitrust-inheritance.png?w=640, small], [https://images.ctfassets.net/189dvqdsjh46/fE9OrSoh0sa04GGIeUA6y/1ec20a7821aaf7c388f891786139e088/platform-hitrust-inheritance.png, medium]"
+      img.img-crisp.lozad alt="platform-controls-diagram" data-background-image="https://images.ctfassets.net/189dvqdsjh46/fE9OrSoh0sa04GGIeUA6y/1ec20a7821aaf7c388f891786139e088/platform-hitrust-inheritance.png"
 
 section#compliance-other.section-article
   .row.group.align-center
@@ -177,7 +177,7 @@ section#compliance-other.section-article
 
         [Learn more about GxP](/academy/gxp-and-business-associates-does-it-exist-like-hipaa).
     .columns.small-12.medium-6.large-4
-      img.group.logo-size--xlarge alt=("GxP Ready") src="https://images.ctfassets.net/189dvqdsjh46/1MTvqDED4USkYYE8S2eSwU/3d8116969c0142abfc77f74e34594155/gxp-badge.png" /
+      img.lozad.group.logo-size--xlarge alt=("GxP Ready") data-src="https://images.ctfassets.net/189dvqdsjh46/1MTvqDED4USkYYE8S2eSwU/3d8116969c0142abfc77f74e34594155/gxp-badge.png" /
 
 .container-color--gray-light
   section#compliance-open-source.section-article
@@ -194,7 +194,7 @@ section#compliance-other.section-article
           p I think this could be revolutionary in helping the industry as a whole collaborate to improve privacy and security practices by gathering information from the highest level security/privacy experts in the field and making it available via similar open source methods.”
         .media-object.card-person
           .media-object-section
-            img.avatar.avatar--large.circle alt=("Katelyn Gleason") src="https://images.ctfassets.net/189dvqdsjh46/2gYOoWVhOEYW4IMAOIeyS0/599f8ca6d3642c732f3f003769563781/headshot-eligible.jpg?w=128" /
+            img.lozad.avatar.avatar--large.circle alt=("Katelyn Gleason") data-src="https://images.ctfassets.net/189dvqdsjh46/2gYOoWVhOEYW4IMAOIeyS0/599f8ca6d3642c732f3f003769563781/headshot-eligible.jpg?w=128" /
           .media-object-section.main-section.align-self-middle
             h4.person-name Katelyn Gleason
             p.person-title CEO &amp; Cofounder, Eligible Inc.
