--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -128,7 +128,7 @@ section.container-gray-10.section-article
   = partial "partials/content/recent-items"
 
 aside#ctaBottom.container-color--dark-grad-blue
-  .section-article.container-image--center data-interchange="[/public/img/art/platform-iso-illustration-bg.svg, small]"
+  .section-article.container-image--center.lozad data-background-image="/public/img/art/platform-iso-illustration-bg.svg"
     .row.align-center
       .columns.small-12.medium-10.large-10.text-center
         h2.headline-3 The Industry Cloud for Digital Health is here.
