--- a/source/academy/index.html.erb
+++ b/source/academy/index.html.erb
@@ -43,7 +43,7 @@ current_page.data.date = today.strftime('%B %-d, %Y')
                         <div class="card-section card-section--flush">
                             <% if guide_entry.has_key?("image_thumb") %>
                                 <a class="" title="Get your free guide" href="/guide/<%= guide_entry["slug"] %>">
-                                    <img class="product-thumb float-right" data-interchange="[<%= guide_entry.image_thumb.url %>?fit=thumb&w=200, medium]" width="40%">
+                                    <img class="lozad product-thumb float-right" data-src="<%= guide_entry.image_thumb.url %>?fit=thumb&w=200" width="40%">
                                 </a>
                             <% end %>
                             <%= Kramdown::Document.new(guide_entry["summary"]).to_html %>
