--- a/source/compliance/index.html.slim
+++ b/source/compliance/index.html.slim
@@ -145,7 +145,7 @@ section#compliance-hitrust.section-article.container-gray-12
         [HITRUST](/discover/hitrust) is the most important prescriptive compliance framework in healthcare. It helps give enterprises assurances that they can use the cloud as if compliance didn't exist, while giving digital health companies a shortcut to credibility.
   .row.align-center.group
     .columns.small-12.large-12
-      img.img-crisp.lozad alt="platform-controls-diagram" data-background-image="https://images.ctfassets.net/189dvqdsjh46/fE9OrSoh0sa04GGIeUA6y/1ec20a7821aaf7c388f891786139e088/platform-hitrust-inheritance.png"
+      img.img-crisp.lozad alt="platform-controls-diagram" data-src="https://images.ctfassets.net/189dvqdsjh46/fE9OrSoh0sa04GGIeUA6y/1ec20a7821aaf7c388f891786139e088/platform-hitrust-inheritance.png"
 
 section#compliance-other.section-article
   .row.group.align-center
