--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -35,26 +35,27 @@ asset_preload: '<link href="/public/img/art/home-header-art-hexagons-anim.svg" r
             = partial("partials/ctas/card-schedule-demo")
 .strip-bright
 section.section-article.container-gray-11
-  .row.align-center.text-center
-    .columns.small-12.large-10
-      h2.headline-3 The burdens of compliance slow down your business
+  .row.align-center.text-center.group
+    .columns.small-12.large-8
+      h2.headline-2 The burdens of compliance slow down your business
   .row.align-center
     .columns.small-12.medium-6
-      h3.headline-5 Shared Responsibility is still your responsibility
-      .row
-        .columns.small-6
-          img src="" alt="compact SR diagram"
-        .columns.small-6
-          p.text-small When you deploy your workloads onto cloud service providers like AWS, Microsoft Azure, and Google Cloud, you are always responsible for a major portion of the compliance burden, predominantly at the operating system level. Addressing the gap is not rocket science, but is tedious and expensive. More importantly, it gives a reason for compliance officers to say "No" to using the cloud.
+      h3.headline-4.text-center Shared Responsibility is still your responsibility
+  .row.align-center.group
+    .columns.small-12.medium-6.large-6
+      img src="" alt="compact SR diagram"
+    .columns.small-12.medium-6.large-4
+      p When you deploy your workloads onto cloud service providers like AWS, Microsoft Azure, and Google Cloud, you are always responsible for a major portion of the compliance burden, predominantly at the operating system level. Addressing the gap is not rocket science, but is tedious and expensive. More importantly, it gives a reason for compliance officers to say "No" to using the cloud.
+  .row.align-center
     .columns.small-12.medium-6
-      h3.headline-5 Interoperable data required interoperable infrastructure
-      .row
-        .columns.small-6
-          img src="" alt="you <> EHRs"
-        .columns.small-6
-          p.text-small Modern health IT is an ecosystem of solutions, which means digital health products must have a strategy to integrate with existing EHRs or other systems of record like PACs. Integrating with legacy on-premises systems is not easy when your architecture is on the cloud. Compliance, security, privacy, VPNs, and 1980s protocols are requirements for true interoperability.
+      h3.headline-4.text-center Interoperable data requirements interoperable infrastructure
+  .row.align-center.group
+    .columns.small-12.medium-6.large-6
+      img src="" alt="you <> EHRs"
+    .columns.small-12.medium-6.large-4
+      p Modern health IT is an ecosystem of solutions, which means digital health products must have a strategy to integrate with existing EHRs or other systems of record like PACs. Integrating with legacy on-premises systems is not easy when your architecture is on the cloud. Compliance, security, privacy, VPNs, and 1980s protocols are requirements for true interoperability.
 
-section.section-article.container-color--dark-grad-green.container-image--fixed
+section.section-article.container-color--dark-grad-blue.container-image--fixed
   .row.align-center
     .columns.small-12.text-center
       h2.headline-3.group Your playbook for digital health success
