--- a/source/assets/scss/settings.scss
+++ b/source/assets/scss/settings.scss
@@ -304,8 +304,8 @@ $breakpoints:(
   medium: 640px,
   medium-large: 840px,
   large: 1024px,
-  xlarge: 1200px,
-  xxlarge: $global-width
+  xlarge: 1400px,
+  xxlarge: 1600px
 );
 $print-breakpoint: large;
 $breakpoint-classes: (small medium medium-large large xlarge);
