--- a/source/compliant-kubernetes-service/index.html.slim
+++ b/source/compliant-kubernetes-service/index.html.slim
@@ -24,69 +24,68 @@ svg aria-hidden="true" data-name="chevron" style=("position: absolute; width: 0;
     /   .columns.small-12
     /     h1.headline-1 Compliant Kubernetes<sup>&reg;</sup> Service is how regulated industries work with cloud native architectures.
     .row.group
-      .columns.small-12.medium-10.large-6.xlarge-6
+      .columns.small-12.medium-10.large-8
         .group--2x
-          h2.headline-3 Datica <strong>bridges security and compliance</strong> with Kubernetes to offer an enterprise-grade cloud native solution.
+          h2.headline-2 Datica <strong>bridges security and compliance</strong> with Kubernetes to offer an enterprise-grade cloud native solution.
           = partial "partials/snippets/button", :locals => { :label => "Schedule a Demo", :url => "#cta", :button_classes => "button button--light", :icon => "icon-chevron-down", :item_id => "cta_top_success" }
     .row.group.align-middle
       .columns.small-12.medium-8.large-7
-        h3.headline-5.spaced-out The Datica promise brought to a Kubernetes service
-        h2.headline-2 Datica bridges security and compliance with Kubernetes to offer an enterprise-grade cloud native solution.
-        p.lead If you're working within a regulated industry like healthcare, you have almost zero options when it comes to using Kubernetes — either you manage the control plane, the operating system and the underlying infrastructure to maintain the flexibility required for compliance, or you risk falling out of compliance by using an existing managed service. Datica changes all of that.
-        .group
-          h3.headline-4 Complete Kubernetes compliance
+        = inline_svg("icon-datica", :class => "icon-size--large svg-color--white float-left")
+        .group.content-indent
+          h3.headline-3 The Datica promise brought to a <br>Kubernetes service
+          / h2.headline-2 Datica bridges security and compliance with Kubernetes to offer an enterprise-grade cloud native solution.
+          p.lead If you're working within a regulated industry like healthcare, you have almost zero options when it comes to using Kubernetes — either you manage the control plane, the operating system and the underlying infrastructure to maintain the flexibility required for compliance, or you risk falling out of compliance by using an existing managed service. <strong>Datica changes all of that.</strong>
+        = inline_svg("icon-k8", :class => "icon-size--large svg-color--white float-left")
+        .group.content-indent
+          h4.headline-4 Complete Kubernetes compliance
           / img.pad.show-for-medium src="https://images.ctfassets.net/189dvqdsjh46/yc639CSDwka8aAs4Uo0kW/cb3458e6089ae9bd7312389acc374f9b/setup-1.png?w=450" alt="Setup"
           p CKS is a compliant managed Kubernetes service for regulated industries. In addition to managing the cluster control plane, CKS configures the underlying operating system and instances, and installs, configures, and manages a set of deployments required to achieve compliance.
-        .group
-          h3.headline-4 The most secure Kubernetes cluster available
+        = inline_svg("small/icon-check-circle", :class => "icon-size--large svg-color--white float-left")
+        .group.content-indent
+          h4.headline-4 The most secure Kubernetes cluster available
           / img.pad.show-for-medium src="https://images.ctfassets.net/189dvqdsjh46/4jQ7VNUSIMUIS2aIKQWEOO/bb83fc6ec264ddd12f3b29410fe784c0/setup-2.png?w=450" alt="Installation"
           p Deployments include logging, monitoring, intrusion detection, antivirus software, and more. In addition to the technical configuration, Datica assumes the liability for the complete stack within our BAA, something not available or possible with any other managed Kubernetes offering. CKS functions like any other Kubernetes cluster—but one that comes pre-configured for compliance and security out of the box.
-      .columns.small-12.medium-4.large-4
+      .show-for-medium.columns.small-12.medium-4.large-4.large-offset-1
         img.img-crisp.product-cks-2.lozad(data-src="https://images.ctfassets.net/189dvqdsjh46/6ukoyjsk7e2CciYIG2Cueu/20999ad20f16115051f1c84bd448289c/cks-art.png")
-/ .row.align-center
-/   .columns.small-12.medium-8.large-5.xlarge-4
-/     .card.drop
-/       = partial("partials/ctas/card-schedule-demo")
-
-section#features.section-article.container-gray-11
-  - ordered_feature_categories = data.site.featureCategories.to_a.sort_by{ |id, featureCat| featureCat['sort_order'] }
-  - ordered_feature_categories.each do | id, featureCat |
-    .row
-      .columns.small-12
-        .callout.callout--large.drop.group--2x
-          .row
-            - if featureCat.has_key?("icon_slug")
-              .columns.small-12.medium-4.large-2.text-right
-                = inline_svg(featureCat.icon_slug, :class => "icon-size--xlarge svg-color--blue")
-            .columns.small-12.medium-8.large-10
-              h3.headline-3(id="featureCat_#{featureCat.slug}") #{featureCat["title"]}
-              - if featureCat.has_key?("desc")
-                p = featureCat["desc"]
-          .row
-            .columns.small-12
-              hr.no-margin-top
-          .row.small-up-1.medium-up-2.large-up-3.xlarge-up-3.group--2x.no-margin-all-the-things
-            - if featureCat.has_key?("related_features")
-              - featureCat["related_features"].each do | feature |
-                .column.feature-item
-                  - if feature.has_key?('desc')
-                    h4.headline-5(id="feature-#{feature.slug}")
-                      a.is-toggle(data-toggle="feature-detail_#{feature.slug}" data-track="true" data-track-category="platform" data-track-id="feature-detail_#{feature.slug}")
-                        = feature.title
-                        svg.icon-inline.icon-toggle.svg-color--blue.icon.icon-plus-disc id="feature-icon-#{feature.slug}"
-                          use.symbol-icon xlink:href="#icon-chevron-down"
-                  - else
-                    h4.headline-6= feature.title
-                  - if feature.has_key?("summary")
-                    = Kramdown::Document.new(feature.summary).to_html
-                  - if feature.has_key?("desc")
-                    .show-more--container.text-smaller data-off-canvas="" data-toggler="" id="feature-detail_#{feature.slug}"
-                      = Kramdown::Document.new(feature.desc).to_html
-  .row.align-center.align-middle
-    .columns.small-6.text-right
-      h3.headline-5.spaced-out Talk to our experts today
-    .columns.small-6
-      = partial "partials/snippets/button", :locals => { :label => "Schedule a Demo", :url => "#cta", :button_classes => "button", :icon => "icon-chevron-down", :item_id => "cta_top_success" }
+    section#features.section-article
+    - ordered_feature_categories = data.site.featureCategories.to_a.sort_by{ |id, featureCat| featureCat['sort_order'] }
+    - ordered_feature_categories.each do | id, featureCat |
+      .row
+        .columns.small-12
+          .container-gray-11.callout--large.drop.group--2x
+            .row
+              - if featureCat.has_key?("icon_slug")
+                .columns.small-12.medium-4.large-2.text-right
+                  = inline_svg(featureCat.icon_slug, :class => "icon-size--xlarge svg-color--blue")
+              .columns.small-12.medium-8.large-10
+                h3.headline-3(id="featureCat_#{featureCat.slug}") #{featureCat["title"]}
+                - if featureCat.has_key?("desc")
+                  p = featureCat["desc"]
+            .row
+              .columns.small-12
+                hr.no-margin-top
+            .row.small-up-1.medium-up-2.large-up-3.xlarge-up-3.group--2x.no-margin-all-the-things
+              - if featureCat.has_key?("related_features")
+                - featureCat["related_features"].each do | feature |
+                  .column.feature-item
+                    - if feature.has_key?('desc')
+                      h4.headline-5(id="feature-#{feature.slug}")
+                        a.is-toggle(data-toggle="feature-detail_#{feature.slug}" data-track="true" data-track-category="platform" data-track-id="feature-detail_#{feature.slug}")
+                          = feature.title
+                          svg.icon-inline.icon-toggle.svg-color--blue.icon.icon-plus-disc id="feature-icon-#{feature.slug}"
+                            use.symbol-icon xlink:href="#icon-chevron-down"
+                    - else
+                      h4.headline-6= feature.title
+                    - if feature.has_key?("summary")
+                      = Kramdown::Document.new(feature.summary).to_html
+                    - if feature.has_key?("desc")
+                      .show-more--container.text-smaller data-off-canvas="" data-toggler="" id="feature-detail_#{feature.slug}"
+                        = Kramdown::Document.new(feature.desc).to_html
+    .row.align-center.align-middle
+      .columns.small-6.text-right
+        h3.headline-5.spaced-out Talk to our experts today
+      .columns.small-6
+        = partial "partials/snippets/button", :locals => { :label => "Schedule a Demo", :url => "#cta", :button_classes => "button", :icon => "icon-chevron-down", :item_id => "cta_top_success" }
 
 section#setup.section-article.container-gray-2
   .row.align-center
