⚡️Home illustrations for 2nd panel

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -38,21 +38,17 @@ section.section-article.container-gray-11
   .row.align-center.text-center.group
     .columns.small-12.large-8
       h2.headline-2 The burdens of compliance slow down your business
-  .row.align-center
-    .columns.small-12.medium-6
-      h3.headline-4.text-center Shared Responsibility is still your responsibility
-  .row.align-center.group
-    .columns.small-12.medium-6.large-6
-      img src="" alt="compact SR diagram"
-    .columns.small-12.medium-6.large-4
+  .row.align-center.align-middle.group
+    .columns.small-12.medium-6.large-5
+      img.lozad data-src="https://images.ctfassets.net/189dvqdsjh46/6miPan23VmIGCkio4USq2i/73c7751e89d3d27bbd9b8f5c892c8762/home-shared-responsibility.png" alt="Shared Responsibility"
+    .columns.small-12.medium-6.large-5
+      h3.headline-4 Shared Responsibility is still your responsibility
       p When you deploy your workloads onto cloud service providers like AWS, Microsoft Azure, and Google Cloud, you are always responsible for a major portion of the compliance burden, predominantly at the operating system level. Addressing the gap is not rocket science, but is tedious and expensive. More importantly, it gives a reason for compliance officers to say "No" to using the cloud.
-  .row.align-center
-    .columns.small-12.medium-6
-      h3.headline-4.text-center Interoperable data requirements interoperable infrastructure
-  .row.align-center.group
-    .columns.small-12.medium-6.large-6
-      img src="" alt="you <> EHRs"
-    .columns.small-12.medium-6.large-4
+  .row.align-center.align-middle.group
+    .columns.small-12.medium-6.large-4.medium-order-2
+      img.lozad data-src="https://images.ctfassets.net/189dvqdsjh46/5N57zvAxrOKQuIUyWQEMeY/0a41e85ba434aa2403577eef7e561368/home-integration.png" alt="EHR integration"
+    .columns.small-12.medium-6.large-5.medium-order-1
+      h3.headline-4 Interoperable data requirements interoperable infrastructure
       p Modern health IT is an ecosystem of solutions, which means digital health products must have a strategy to integrate with existing EHRs or other systems of record like PACs. Integrating with legacy on-premises systems is not easy when your architecture is on the cloud. Compliance, security, privacy, VPNs, and 1980s protocols are requirements for true interoperability.
 
 section.section-article.bg-blend-multiply.container-image--fixed.lozad style="background-color: #6a8ac5;" data-background-image="https://images.ctfassets.net/189dvqdsjh46/6ivcMB8oHC8CiciwMMKOiK/aa6fa29c4e6a724f6864adef1f635cc3/bridge_beam__cables__sky__low-contrast_light__-_yuriy-trubitsyn-8714-unsplash.jpg?w=1800"
