Minor color tweak

--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -51,7 +51,7 @@ section.section-article.container-gray-11
       h3.headline-4 Interoperable data requires interoperable infrastructure
       p Modern health IT is an ecosystem of solutions, which means digital health products must have a strategy to integrate with existing EHRs or other systems of record like PACs. Integrating with legacy on-premises systems is not easy when your architecture is on the cloud. Compliance, security, privacy, VPNs, and 1980s-era protocols are requirements for true interoperability.
 
-section.section-article.bg-blend-multiply.container-image--fixed.lozad style="background-color: #6a8ac5;" data-background-image="https://images.ctfassets.net/189dvqdsjh46/6ivcMB8oHC8CiciwMMKOiK/aa6fa29c4e6a724f6864adef1f635cc3/bridge_beam__cables__sky__low-contrast_light__-_yuriy-trubitsyn-8714-unsplash.jpg?w=1800"
+section.section-article.bg-blend-multiply.container-image--fixed.lozad style="background-color: #578aaf;" data-background-image="https://images.ctfassets.net/189dvqdsjh46/6ivcMB8oHC8CiciwMMKOiK/aa6fa29c4e6a724f6864adef1f635cc3/bridge_beam__cables__sky__low-contrast_light__-_yuriy-trubitsyn-8714-unsplash.jpg?w=1800"
   .row.align-center
     .columns.small-12.text-center
       h2.headline-3.group.text--white Your playbook for digital health success
